# gsuite

./: .gitignore  .gitmodules  GSuite.sln  README.md
scripts/: emsdk_activate.ps1  emsdk_activate.sh  emsdk_install.ps1  emsdk_install.sh  wasm_prepare.sh
src/gencoder/GSuite.Encoder.Console/: GSuite.Encoder.Console.csproj  Program.cs
src/gencoder/GSuite.Encoder.Console/Properties/: launchSettings.json
src/ggeometry/: .gitignore
src/ggeometry/GSuite.GGeometry.Console/: CMakeLists.txt  GSuite.GGeometry.Console.cpp  GSuite.GGeometry.Console.vcxproj  GSuite.GGeometry.Console.vcxproj.filters  build.ps1  build_wasm.ps1  main.cpp  vcpkg.json
src/gstreamer/GSuite.Streamer/: GSuite.Streamer.csproj  IStreamChannel.cs  SerialPortChannel.cs
src/gstreamer/GSuite.Streamer.Console/: GSuite.Streamer.Console.csproj
src/gstreamer/GSuite.Streamer.Console/Properties/: launchSettings.json
src/gstreamer/GSuite.Streamer/Properties/: launchSettings.json
src/shared/GSuite.Core/: GAction.cs  GCommand.cs  GObject.cs  GParameter.cs  GParametrizable.cs  GSuite.Core.csproj  GType.cs  IGParametrizable.cs  StreamExtensions.cs
src/shared/GSuite.Core/Properties/: launchSettings.json
src/shared/GSuite.GCode/: GCodeWriter.cs
src/shared/GSuite.GCode/Properties/: launchSettings.json
src/shared/GSuite.Geometry/: Distance.cs  GSuite.Geometry.csproj
src/shared/GSuite.Geometry/Properties/: launchSettings.json
src/shared/GSuite.Models/GCode/: GLayer.cs  GPath.cs  GPoint.cs  GPoint3D.cs  GPrint.cs
src/shared/GSuite.Models/Properties/: launchSettings.json
src/shared/GSuite.Models/Templates/: GAction.cs  GMacro.cs  GParameter.cs  GParameterType.cs  GParameterTypeClass.cs  GReceipt.cs  GTemplateObject.cs  IGTemplateObject.cs
src/shared/GSuite.Processing/Properties/: launchSettings.json
src/shared/GSuite.Serialization/: GJsonSerializer.cs  GSerializer.cs  GSuite.Serialization.csproj  GYamlSerializer.cs  ISerializer.cs
src/shared/GSuite.Serialization/Models/: GAction.cs  GActionInvocation.cs  GActionInvocationParameter.cs  GBox.cs  GBoxTemplate.cs  (+6 more)
(+16 files in other folders)
